# stopReasons

./: .gitignore  README.md  fine_tune.py  predict.py  predict_debug.py  pyproject.toml  requirements.txt
docs/: index.html
src/: BertClassifier.py  common_classes.py  enrichments.py  figures.R  fine-tune.py  predict.py  predictions.py  push_to_hub.py  run_prediction.py  train.py  utils.py
src/sections/: efficacy.rmd  predictions.rmd  safety.rmd  sentenceSimilarities.rmd
stop_reasons/: evaluate_model.py  inference_local.py  pt_trainer.py  push_to_hub.py  train.py  trainer.py  utils.py
stop_reasons_classifier/stop_reasons/: evaluate_model.py  inference_spark.py  tf_trainer.py
utils/: initialise_cluster.sh
