[tool.poetry]
name = "stopreasons"
version = "0.1.0"
description = "Module to fine tune a NLP model that assigns one or multiple classes of why a clinical trial has been stopped early. The base architecture is a BERT model fine tuned on a dataset curated by the Open Targets team."
authors = ["Irene López <irene.lopezs@protonmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
datasets = "^2.4.0"
transformers = {extras = ["tf-cpu"], version = "^4.21.3"}
spark-nlp = "4.1.0"
pyspark = "^3.3.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
